2009-11-13  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Adam Barth.

        Chromium: [REGRESSION] Crash while stopping on a breakpoint.
        Rolling back r50890.

        https://bugs.webkit.org/show_bug.cgi?id=31467

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::canAccessPrivate):

2009-11-13  Dirk Schulze  <krit@webkit.org>

        Reviewed by Gustavo Noronha.

        [CAIRO] shadow support for Canvas and SVG
        [https://bugs.webkit.org/show_bug.cgi?id=30960]
        
        This is the fix of a regression, caused by the shadow patch
        from the bug above. Reinserted the save and restore calls
        that were accidently removed by the previous patch.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::setPlatformFill):
        (WebCore::setPlatformStroke):

2009-11-13  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed. Reverting r50908 since it makes inspector tests
        time out.

        https://bugs.webkit.org/show_bug.cgi?id=31439

        * inspector/front-end/inspector.js:

2009-11-13  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Timothy Hatcher.

        Enable 'console.profile()' and 'console.profileEnd()'
        regardless of JAVASCRIPT_DEBUGGER.

        https://bugs.webkit.org/show_bug.cgi?id=31293

        * WebCore.gypi:
        * bindings/js/JSConsoleCustom.cpp:
        (WebCore::JSConsole::profile):
        (WebCore::JSConsole::profileEnd):
        * bindings/v8/custom/V8ConsoleCustom.cpp: Added.
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8CustomBinding.h:
        * page/Console.idl:

2009-11-12  David Levin  <levin@chromium.org>

        Reviewed by NOBODY.

        Chromium build fix.

        * bindings/v8/ScriptController.h:
        (WebCore::ScriptController::evaluateInWorld): Add a dummy
         method which isn't called in chromium to make things compile.
